feat(frontend): install+setup redux and react-router
* configure path aliases with `@/`

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,6 +1,9 @@
 {
     "compilerOptions": {
         "typeRoots": ["./types", "./node_modules/@types", "./node_modules"],
-        "types": ["vitest/globals"]
+        "types": ["vitest/globals"],
+        "paths": {
+            "@/*": ["./src/*"]
+        }
     }
 }
