--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.8.2",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^6.30.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
