--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,12 @@
         "test": "vitest"
     },
     "dependencies": {
-
         "@reduxjs/toolkit": "^2.8.2",
+        "lucide-react": "^0.535.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-redux": "^9.2.0",
         "react-router-dom": "^6.30.1"
-
     },
     "devDependencies": {
         "@eslint/js": "^9.30.1",
