--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,14 @@ services:
       - "5173:5173"
     volumes:
       - ./client:/app
-      - /app/node_modules
+      - /app/node_modules/
     working_dir: /app
-    command: npm run dev -- --host
+    command: npm run dev -- --host --force
     depends_on:
       - backend
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    
 
   db:
     image: mysql:8.0
