--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
-
+        "@phosphor-icons/react": "^2.1.10",
         "@reduxjs/toolkit": "^2.8.2",
-
         "axios": "^1.11.0",
-
-        "lucide-react": "^0.535.0",
-
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-redux": "^9.2.0",
@@ -32,7 +28,6 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
         "globals": "^16.3.0",
-        "jsdom": "^26.1.0",
         "prettier": "3.6.2",
         "vite": "^7.0.6"
     }
