added search product page

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,8 +1,15 @@
 {
     "compilerOptions": {
-        "typeRoots": ["./types", "./node_modules/@types", "./node_modules"],
+        "baseUrl": ".",
         "paths": {
-            "@/*": ["./src/*"]
-        }
-    }
+            "@/*": ["src/*"]
+        },
+        "types": [],
+        "typeRoots": ["node_modules/@types"]
+    },
+    "typeAcquisition": {
+        "enable": true
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "**/node_modules/*"]
 }
