--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /var/www/html
 
 RUN apt-get update && apt-get install -y \
     git curl zip unzip libpng-dev libonig-dev libxml2-dev libzip-dev \
-    && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
+    && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip \
+    && pecl install redis \
+    && docker-php-ext-enable redis
 
 RUN a2enmod rewrite
 
