--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,23 +11,28 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout my Code 
+      - name: Checkout Code 
         uses: actions/checkout@v4
 
-      - name: Install PHP 
+      - name: Set up PHP 
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.2" 
+          php-version: "8.2"
 
-      - name: Composer Install
+      - name: Install Composer Dependencies
+        working-directory: ./server
         run: composer install --no-interaction --no-progress --optimize-autoloader
 
-      - name: Prepare Laravel 
+      - name: Prepare Laravel
+        working-directory: ./server
         run: |
           cp .env.example .env
-          php artisan key:generate 
+          php artisan key:generate
+
       - name: Run Laravel Tests
+        working-directory: ./server
         run: php artisan test
+
  # cd:
    # needs: ci
    # runs-on: ubuntu-latest
