--- a/server/.env.example
+++ b/server/.env.example
@@ -23,9 +23,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=your_database_name
-DB_USERNAME=your_database_user
-DB_PASSWORD=your_database_password
+DB_DATABASE=ecommercedb
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
