--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,46 +1,46 @@
-name: Laravel Docker CI
+# name: Laravel Docker CI
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+# on:
+#   push:
+#     branches: [main]
+#   pull_request:
+#     branches: [main]
 
-jobs:
-  laravel-tests:
-    runs-on: ubuntu-latest
+# jobs:
+#   laravel-tests:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v4
 
-      - name: Copy Laravel .env file
-        run: cp server/.env.example server/.env
+#       - name: Copy Laravel .env file
+#         run: cp server/.env.example server/.env
 
-      - name: Start Docker containers
-        run: docker compose up -d --build
+#       - name: Start Docker containers
+#         run: docker compose up -d --build
 
-      - name: Wait for MySQL to be ready
-        run: |
-          echo "Waiting for MySQL..."
-          until docker exec mysql-db mysqladmin ping -hlocalhost --silent; do
-            sleep 2
-          done
+#       - name: Wait for MySQL to be ready
+#         run: |
+#           echo "Waiting for MySQL..."
+#           until docker exec mysql-db mysqladmin ping -hlocalhost --silent; do
+#             sleep 2
+#           done
 
-      - name: Install Composer dependencies inside backend container
-        run: docker exec backend composer install --no-interaction --no-progress --optimize-autoloader
+#       - name: Install Composer dependencies inside backend container
+#         run: docker exec backend composer install --no-interaction --no-progress --optimize-autoloader
 
-      - name: Generate Laravel app key and JWT secret
-        run: |
-          docker exec backend php artisan key:generate
-          docker exec backend php artisan jwt:secret --force
+#       - name: Generate Laravel app key and JWT secret
+#         run: |
+#           docker exec backend php artisan key:generate
+#           docker exec backend php artisan jwt:secret --force
 
-      - name: Run migrations inside backend container
-        run: docker exec backend php artisan migrate --force
+#       - name: Run migrations inside backend container
+#         run: docker exec backend php artisan migrate --force
 
-      - name: Run tests inside backend container
-        run: docker exec backend php artisan test
+#       - name: Run tests inside backend container
+#         run: docker exec backend php artisan test
 
-      - name: Tear down Docker containers
-        if: always()
-        run: docker compose down
+#       - name: Tear down Docker containers
+#         if: always()
+#         run: docker compose down
